prevent tx_signature overflow

--- a/explorer/client/src/components/transaction-card/TransactionCard.module.css
+++ b/explorer/client/src/components/transaction-card/TransactionCard.module.css
@@ -16,6 +16,10 @@ div.txcardgrid:nth-child(2n + 1) {
     @apply bg-[#f6f6f6];
 }
 
+.listitems .sublist > div {
+    @apply break-all break-words max-w-[84vw];
+}
+
 div.txcardgrid:first-child {
     @apply bg-offblack rounded-none items-center pt-5 pb-5 font-black shadow-md border-2 border-coolGray-400;
 }
@@ -29,7 +33,7 @@ div.txcardgrid > div:last-child {
 }
 
 div.txcardgridlarge {
-    @apply font-mono break-all tracking-tight font-normal block col-span-2;
+    @apply font-mono break-all tracking-tight font-normal md:block col-span-2  max-w-[84vw];
 }
 
 div.status-success {
